syntax = "proto3";
option java_multiple_files = true;
package org.gersty.grpc.standalone.fileupload;

message FileRequest {
    string name = 1;
    bytes data = 2;
    int32 size = 3;
}

message FileResponse {
    string status = 1;
    string message = 2;
}

service FileUploadService {
    rpc upload(stream FileRequest) returns (FileResponse);
}